--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -36,11 +36,10 @@
         android:layout_alignEnd="@+id/mainFab"
         android:layout_alignRight="@+id/mainFab"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="7.5dp"
-
+        android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/black"
         app:fabSize="mini"
         app:srcCompat="@android:drawable/ic_menu_recent_history" />
 
@@ -48,45 +47,46 @@
         android:id="@+id/barrackFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-
+        android:layout_above="@+id/townhallFab"
+        android:layout_alignEnd="@+id/townhallFab"
+        android:layout_alignRight="@+id/townhallFab"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/black"
         app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_menu_zoom"
-        android:layout_above="@+id/townhallFab"
-        android:layout_alignLeft="@+id/townhallFab"
-        android:layout_alignStart="@+id/townhallFab" />
+        app:srcCompat="@android:drawable/ic_menu_zoom" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/mineFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_above="@+id/barrackFab"
+        android:layout_alignEnd="@+id/barrackFab"
+        android:layout_alignRight="@+id/barrackFab"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/black"
         app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait"
-        android:layout_marginBottom="22dp"
-        android:layout_above="@+id/barrackFab"
-        android:layout_alignLeft="@+id/barrackFab"
-        android:layout_alignStart="@+id/barrackFab" />
+        app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/farmFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/mineFab"
+        android:layout_alignEnd="@+id/mineFab"
+        android:layout_alignRight="@+id/mineFab"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_bright"
-
+        app:backgroundTint="@android:color/black"
         app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_dialog_map"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/mineFab"
-        android:layout_alignStart="@+id/mineFab" />
+        app:srcCompat="@android:drawable/ic_dialog_map" />
 
 
 </RelativeLayout>
