--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -25,7 +25,7 @@
         <item
             android:id="@+id/nav_user"
             android:icon="@drawable/ic_user_black"
-            android:title="Profile"/>
+            android:title="Leaderboard"/>
     </group>
 
 </menu>
