--- a/app/src/main/res/layout/activity_main_fragment_container.xml
+++ b/app/src/main/res/layout/activity_main_fragment_container.xml
@@ -12,7 +12,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.greenfox.peridot.peridot_coz_android.activity.MainActivity"
     tools:showIn="@layout/activity_main_toolbar_layout"
-    android:background="@android:color/holo_purple" >
+    android:background="@drawable/background">
 
     <FrameLayout
         android:id="@+id/content_frame"
