--- a/app/src/main/res/layout/buildings_overview_listitem.xml
+++ b/app/src/main/res/layout/buildings_overview_listitem.xml
@@ -34,6 +34,6 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/up_arrow"
-        android:id="@+id/update"
-        android:layout_gravity="end"/>
+        android:id="@+id/upgrade"
+        android:layout_gravity="end" />
 </LinearLayout>
