--- a/app/src/main/res/layout/troops_overview_listitem.xml
+++ b/app/src/main/res/layout/troops_overview_listitem.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#CCFFFFFF" >
 
     <ImageView
         android:layout_width="70dp"
@@ -44,7 +45,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/up_arrow"
-        android:id="@+id/update"
+        android:id="@+id/upgrade"
         android:layout_gravity="end"/>
 
 </LinearLayout>
