--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -52,7 +52,7 @@
         android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/black"
+        app:backgroundTint="@android:color/holo_blue_light"
         app:fabSize="mini"
         android:src="@drawable/ic_farm" />
 
@@ -79,7 +79,7 @@
         android:layout_alignEnd="@+id/barrackFab"
         android:layout_alignRight="@+id/barrackFab"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="7.5dp"
+        android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
         app:backgroundTint="@android:color/holo_blue_light"
