--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,6 +13,7 @@
         android:layout_weight="0.07"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:paddingLeft="5dp"
         android:background="#CCFFFFFF"/>
 
     <EditText
@@ -22,6 +23,7 @@
         android:id="@+id/regPassword"
         android:layout_weight="0.07"
         android:layout_marginBottom="20dp"
+        android:paddingLeft="5dp"
         android:background="#CCFFFFFF"/>
 
     <EditText
@@ -31,6 +33,37 @@
         android:id="@+id/regKingdom"
         android:layout_weight="0.07"
         android:layout_marginBottom="20dp"
+        android:paddingLeft="5dp"
+        android:background="#CCFFFFFF"/>
+    
+    <EditText
+        android:hint="Enter your firstname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/regFirstName"
+        android:layout_weight="0.07"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="5dp"
+        android:background="#CCFFFFFF"/>
+
+    <EditText
+        android:hint="Enter your lastname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/regLastName"
+        android:layout_weight="0.07"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="5dp"
+        android:background="#CCFFFFFF"/>
+
+    <EditText
+        android:hint="Enter your email adress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/regEmail"
+        android:layout_weight="0.07"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="5dp"
         android:background="#CCFFFFFF"/>
 
     <Button
