--- a/app/src/main/res/layout/resources_overview_listitem.xml
+++ b/app/src/main/res/layout/resources_overview_listitem.xml
@@ -1,41 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:padding="10dp"
+    android:weightSum="1"
+    android:background="#CCFFFFFF">
 
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/troop"
-        android:id="@+id/resourceImage" />
+        android:id="@+id/resourceImage"
+        />
 
-    <TextView
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:text="TextView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/type"
-        android:layout_weight="0.04"
-        android:layout_marginLeft="30dp"/>
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:layout_weight="0.99">
 
-    <TextView
-        android:text="TextView"
-        android:textSize="14sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/amount"
-        android:layout_weight="0.04"
-        android:layout_marginLeft="30dp"/>
+        <TextView
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/type"
+            android:layout_weight="0.04"
+            android:layout_marginLeft="30dp"/>
 
-    <TextView
-        android:textStyle="italic"
-        android:textSize="14sp"
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/buildings"
-        android:layout_weight="0.04"
-        android:layout_marginLeft="30dp"/>
+        <TextView
+            android:text="TextView"
+            android:textSize="14sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/amount"
+            android:layout_weight="0.04"
+            android:layout_marginLeft="30dp"/>
+
+        <TextView
+            android:textStyle="italic"
+            android:textSize="14sp"
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/buildings"
+            android:layout_weight="0.04"
+            android:layout_marginLeft="30dp"/>
+    </LinearLayout>
+
 </LinearLayout>
