--- a/app/src/main/res/layout/users_overview_layout.xml
+++ b/app/src/main/res/layout/users_overview_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="#fffbf7">
+    android:background="#CCFFFFFF">
     <SearchView
         android:text="Search users"
         android:layout_width="match_parent"
