building textview deleted, font size and weight modified

--- a/app/src/main/res/layout/resources_overview_listitem.xml
+++ b/app/src/main/res/layout/resources_overview_listitem.xml
@@ -34,6 +34,7 @@
 
         <TextView
             android:text="TextView"
+            android:textStyle="bold"
             android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,15 +42,6 @@
             android:layout_weight="0.04"
             android:layout_marginLeft="30dp"/>
 
-        <TextView
-            android:textStyle="italic"
-            android:textSize="14sp"
-            android:text="TextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/buildings"
-            android:layout_weight="0.04"
-            android:layout_marginLeft="30dp"/>
     </LinearLayout>
 
 </LinearLayout>
