fixed fab on buildings

--- a/app/src/main/res/layout/buildings_overview_layout.xml
+++ b/app/src/main/res/layout/buildings_overview_layout.xml
@@ -52,7 +52,7 @@
         android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/holo_blue_bright"
         app:fabSize="mini"
         android:src="@drawable/ic_farm" />
 
@@ -67,7 +67,7 @@
         android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/holo_blue_bright"
         app:fabSize="mini"
         android:src="@drawable/ic_barracks" />
 
@@ -82,22 +82,7 @@
         android:layout_marginRight="0dp"
         android:clickable="false"
         android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
+        app:backgroundTint="@android:color/holo_blue_bright"
         app:fabSize="mini"
         android:src="@drawable/ic_townhall" />
-  
-   <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fakeDownloadFab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/townhallFab"
-        android:layout_alignEnd="@+id/townhallFab"
-        android:layout_alignRight="@+id/townhallFab"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="0dp"
-        android:clickable="false"
-        android:visibility="invisible"
-        app:backgroundTint="@android:color/holo_blue_light"
-        app:fabSize="mini"
-        android:src="@drawable/ic_sync" />
 </RelativeLayout>
