--- a/app/src/main/res/layout/troops_overview_layout.xml
+++ b/app/src/main/res/layout/troops_overview_layout.xml
@@ -14,4 +14,17 @@
         android:dividerHeight="15dp" >
     </ListView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/troopsFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:clickable="true"
+        app:backgroundTint="@android:color/holo_blue_dark"
+        app:fabSize="normal"
+        android:src="@drawable/ic_build" />
+
 </RelativeLayout>
